# libbbf

./: .gitignore  CMakeLists.txt  SPECNOTE.txt  readme.md
.github/workflows/: build.yml
src/: bbfcodec.cpp  bbfcodec.h  libbbf.h
src/bench/: bbfbench.cpp
src/bind/: bbfwasm.cpp
src/muxer/: bbfmux.cpp  dedupemap.cpp  dedupemap.h  stringpool.cpp  stringpool.h
